# ble2serial

./: package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  store.ts  types.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/com0com/: de.json  install.bat  run_setupc.bat
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  ble.rs  main.rs  port.rs
src/Components/: Device.tsx  DeviceList.tsx
src/routes/: Connected.tsx  Home.tsx
