[package]
name = "ble2serial"
version = "0.0.0"
description = "A Tauri App"
authors = ["Maulik Patel"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
winres = "0.1"

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3.1"
tokio = { version = "1.27.0", features = ["full"] }
serialport = { git = "https://github.com/Crzyrndm/serialport-rs", branch="#81-missing-modem-ports" ,features = ["serde"] }
btleplug = { git = "https://github.com/azimuthdeveloper/btleplug" , branch = "windows-local-name"}
futures = "0.3.28"
regex = "1.8.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
log = "0.4.14"




[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
